// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIControlWrapperInline> renders a hidden label, invalid, and an error message 1`] = `
<div>
  <label>
    <input
      aria-describedby="xui-testGeneratedId-message"
      aria-invalid={true}
      type="checkbox"
    />
  </label>
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    id="xui-testGeneratedId-message"
    role="status"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 Z M7,4 L7,9 L9,9 L9,4 L7,4 Z M7,10 L7,12 L9,12 L9,10 L7,10 Z"
        role="presentation"
      />
    </svg>
    oh no!
  </div>
</div>
`;

exports[`<XUIControlWrapperInline> renders a simple HTML label, when provided 1`] = `
<div>
  <label>
    <input
      aria-invalid={false}
      type="checkbox"
    />
    <span
      id="xui-testGeneratedId"
    >
      <span>
        Impressive input label
      </span>
    </span>
  </label>
</div>
`;

exports[`<XUIControlWrapperInline> renders basic example 1`] = `
<div>
  <label>
    <input
      aria-invalid={false}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`<XUIControlWrapperInline> renders classes and qaHook on all elements 1`] = `
<div>
  <label
    className="test-field-class"
    data-automationid="ctrl-wrapper"
  >
    <input
      aria-describedby="testSpecificLabel-message"
      aria-invalid={false}
      type="checkbox"
    />
    <span
      className="test-label-class"
      data-automationid="ctrl-wrapper--label"
      id="testSpecificLabel"
    >
      A label for testing
    </span>
  </label>
  <div
    className="xui-validation xui-validation-layout"
    data-automationid="ctrl-wrapper--message"
    id="testSpecificLabel-message"
    role="status"
  >
    I will give you a clue
  </div>
</div>
`;
